# resourcelocator

./: CMakeLists.txt  README.md  cpack_it.cmake  install_it.cmake  resourcelocator.pc.in
include/resourcelocator/: gladelocator.hpp  resourcelocator.hpp  stdutils.hpp
src/: resourcelocator.cpp
src/test/: test_gladelocator.cpp
